# pliro

./: .env.example  .gitignore  DCA_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  main.py  pyproject.toml  run_dca_tests.sh
alembic/: env.py
alembic/versions/: 99d01c9986d4_initial_migration.py  b26076fea5cd_timezone_aware_timestamps.py  dca_v1_recurring_payments.py
app/: config.py  main.py
app/ai/: __init__.py  escalation.py
app/api/v1/routes/: bot.py  health.py
app/bot/: agent.py  handlers.py  routing_integration.py  ui_formatters.py
app/cache/: __init__.py  cache_manager.py
app/db/: crud.py  database.py  models.py
app/dca/: __init__.py  crud.py  executor.py  handlers.py  models.py  parser.py  scheduler.py
app/middleware/: __init__.py  logging_metrics.py  state_machine.py
app/rate_limit/: __init__.py  limiter.py
app/router/: __init__.py  intent_classifier.py  intent_router.py  patterns.py
app/tools/: wallet_tools.py
app/wallet/: gas.py  privy.py  zerion.py
tests/: conftest.py  test_dca_crud.py  test_dca_integration.py  test_dca_parser.py
